add-opens to build on newer jdks